Adds a model saved with pickle

--- a/Copy.ipynb
+++ b/Copy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "stainless-muslim",
+   "id": "hired-composition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "photographic-sport",
+   "id": "available-amount",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "executed-milan",
+   "id": "stone-criminal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "processed-alliance",
+   "id": "ultimate-traveler",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "electric-medicaid",
+   "id": "oriental-technique",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "indirect-partner",
+   "id": "ongoing-mention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "registered-arbitration",
+   "id": "apart-regular",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "portable-survivor",
+   "id": "pursuant-shoulder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "surprised-practice",
+   "id": "great-burke",
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "brave-queensland",
+   "id": "quantitative-reset",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "external-debate",
+   "id": "controlled-anaheim",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "comic-tamil",
+   "id": "frank-driving",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "encouraging-grill",
+   "id": "organizational-richmond",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "occupational-checkout",
+   "id": "expanded-likelihood",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "smart-theta",
+   "id": "concerned-cancer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "prescribed-coalition",
+   "id": "offensive-compensation",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "educational-blackjack",
+   "id": "featured-error",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "english-treasury",
+   "id": "unlimited-maximum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "controlled-assignment",
+   "id": "transparent-tiffany",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "billion-jordan",
+   "id": "acting-invalid",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "wooden-extra",
+   "id": "interesting-maria",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "broad-wilson",
+   "id": "british-cursor",
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "racial-secretary",
+   "id": "alpha-brook",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "noted-checkout",
+   "id": "turned-empire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "technological-brunswick",
+   "id": "stable-sherman",
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "legitimate-hobby",
+   "id": "cognitive-dutch",
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "bibliographic-campbell",
+   "id": "level-insurance",
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "velvet-brazil",
+   "id": "uniform-pierre",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stupid-crossing",
+   "id": "extreme-sensitivity",
    "metadata": {},
    "source": [
     "- post requist from the front end and the body will be json object \n",
@@ -1137,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ceramic-navigator",
+   "id": "starting-organ",
    "metadata": {},
    "outputs": [
     {
@@ -1163,8 +1163,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "enhanced-associate",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8571428571428571\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Saving model with pickle\n",
+    "import pickle\n",
+    "\n",
+    "# save the model to disk\n",
+    "filename_pickle = 'finalized_model_pickle.sav'\n",
+    "pickle.dump(rf, open(filename_pickle, 'wb'))\n",
+    "\n",
+    "# load the model from disk\n",
+    "loaded_model_pickle = pickle.load(open(filename_pickle, 'rb'))\n",
+    "result_pickle = loaded_model_pickle.score(X_test, y_test)\n",
+    "print(result_pickle)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "metropolitan-finland",
+   "id": "apart-dinner",
    "metadata": {},
    "outputs": [],
    "source": []
