--- a/Classification models.ipynb
+++ b/Classification models.ipynb
@@ -1909,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 314,
    "id": "developing-academy",
    "metadata": {},
    "outputs": [
@@ -1925,6 +1925,8 @@
     "#Saving model with joblib\n",
     "# save the model to disk\n",
     "import joblib\n",
+    "\n",
+    "# save the model to disk\n",
     "filename = 'finalized_model.sav'\n",
     "joblib.dump(rf, filename)\n",
     " \n",
@@ -1936,8 +1938,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 315,
+   "id": "spanish-prior",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8571428571428571\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Saving model with pickle\n",
+    "import pickle\n",
+    "\n",
+    "# save the model to disk\n",
+    "filename_pickle = 'finalized_model_pickle.sav'\n",
+    "pickle.dump(rf, open(filename_pickle, 'wb'))\n",
+    "\n",
+    "# load the model from disk\n",
+    "loaded_model_pickle = pickle.load(open(filename_pickle, 'rb'))\n",
+    "result_pickle = loaded_model_pickle.score(X_test, y_test)\n",
+    "print(result_pickle)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "muslim-vintage",
+   "id": "federal-angle",
    "metadata": {},
    "outputs": [],
    "source": []
