--- a/Classification models.ipynb
+++ b/Classification models.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "sticky-lingerie",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +19,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "quarterly-disposition",
    "metadata": {},
    "outputs": [
     {
@@ -299,9 +297,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ordinary-candle",
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Rural', 'Urban', 'Semiurban'], dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df['Property_Area'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -334,7 +353,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "designing-scanner",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +665,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eastern-pension",
    "metadata": {},
    "source": [
     "## Legend:\n",
@@ -698,7 +715,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "proud-zambia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +729,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "transsexual-affair",
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +903,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "frank-uniform",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +915,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "acute-dylan",
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +937,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "controlled-olive",
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +958,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "living-dictionary",
    "metadata": {},
    "source": [
     "#### Decision Tree"
@@ -955,7 +966,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "mysterious-creator",
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +989,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "former-valentine",
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1011,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "willing-excitement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1023,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "demonstrated-particular",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1033,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "refined-husband",
    "metadata": {},
    "source": [
     "#### Random Forest"
@@ -1035,7 +1041,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "valued-responsibility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1053,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "handed-relaxation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1065,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adolescent-multiple",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1075,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "graduate-bracket",
    "metadata": {},
    "source": [
     "#### Logistic Regression"
@@ -1081,7 +1083,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "threaded-cable",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1097,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "supreme-scheme",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1109,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "renewable-helena",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +1118,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "appropriate-sculpture",
    "metadata": {},
    "source": [
     "#### K-Nearest Neighbor"
@@ -1128,7 +1126,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "confused-drunk",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1139,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interstate-horror",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1151,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tight-papua",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,7 +1180,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beautiful-pickup",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1191,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "varied-mercy",
    "metadata": {},
    "source": [
     "#### Support Vector Machine (SVM)"
@@ -1206,7 +1199,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "confidential-underwear",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1211,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "experimental-valuation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1221,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stupid-detective",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,7 +1234,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "champion-equilibrium",
    "metadata": {
     "scrolled": true
    },
@@ -1259,7 +1248,6 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "joined-integer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1274,6 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "durable-damages",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1285,6 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "biological-anime",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1295,6 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "unavailable-business",
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1317,6 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "three-bones",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,7 +1327,6 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "organic-deployment",
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1353,6 @@
   {
    "cell_type": "code",
    "execution_count": 251,
-   "id": "boxed-tragedy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1362,6 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "id": "studied-coffee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1390,7 +1371,6 @@
   {
    "cell_type": "code",
    "execution_count": 253,
-   "id": "aquatic-programmer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1400,7 +1380,6 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "id": "american-hopkins",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1393,6 @@
   {
    "cell_type": "code",
    "execution_count": 276,
-   "id": "genetic-interview",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1402,6 @@
   {
    "cell_type": "code",
    "execution_count": 277,
-   "id": "technical-chance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1434,6 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "id": "plastic-sigma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,7 +1443,6 @@
   {
    "cell_type": "code",
    "execution_count": 279,
-   "id": "attractive-greeting",
    "metadata": {
     "scrolled": false
    },
@@ -1489,7 +1464,6 @@
   {
    "cell_type": "code",
    "execution_count": 280,
-   "id": "indoor-catalog",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1499,7 +1473,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "material-keyboard",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1507,7 +1480,6 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "id": "pleasant-accessory",
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1505,6 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "id": "missing-hardware",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1578,6 @@
   {
    "cell_type": "code",
    "execution_count": 283,
-   "id": "fancy-throw",
    "metadata": {
     "scrolled": false
    },
@@ -1628,7 +1598,6 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "id": "driven-salem",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1638,7 +1607,6 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "id": "civil-wireless",
    "metadata": {
     "scrolled": true
    },
@@ -1651,7 +1619,6 @@
   {
    "cell_type": "code",
    "execution_count": 299,
-   "id": "unexpected-climate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1664,7 +1631,6 @@
   {
    "cell_type": "code",
    "execution_count": 300,
-   "id": "exposed-klein",
    "metadata": {},
    "outputs": [
     {
@@ -1705,7 +1671,6 @@
   {
    "cell_type": "code",
    "execution_count": 301,
-   "id": "enclosed-cylinder",
    "metadata": {},
    "outputs": [
     {
@@ -1736,7 +1701,6 @@
   {
    "cell_type": "code",
    "execution_count": 302,
-   "id": "authentic-simple",
    "metadata": {},
    "outputs": [
     {
@@ -1825,7 +1789,6 @@
   {
    "cell_type": "code",
    "execution_count": 312,
-   "id": "attached-workstation",
    "metadata": {},
    "outputs": [
     {
@@ -1855,7 +1818,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "living-teens",
    "metadata": {},
    "source": [
     "- post requist from the front end and the body will be json object \n",
@@ -1910,7 +1872,6 @@
   {
    "cell_type": "code",
    "execution_count": 314,
-   "id": "developing-academy",
    "metadata": {},
    "outputs": [
     {
@@ -1939,7 +1900,6 @@
   {
    "cell_type": "code",
    "execution_count": 315,
-   "id": "spanish-prior",
    "metadata": {},
    "outputs": [
     {
@@ -1967,7 +1927,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "federal-angle",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1975,9 +1934,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PythonAdv] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-PythonAdv-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1989,7 +1948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
