--- a/Copy.ipynb
+++ b/Copy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "hired-composition",
+   "id": "metropolitan-somalia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "available-amount",
+   "id": "grateful-hazard",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "stone-criminal",
+   "id": "domestic-collection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ultimate-traveler",
+   "id": "divine-ending",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "oriental-technique",
+   "id": "artificial-sperm",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ongoing-mention",
+   "id": "floppy-classic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "apart-regular",
+   "id": "traditional-elimination",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "pursuant-shoulder",
+   "id": "talented-treatment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "great-burke",
+   "id": "athletic-diabetes",
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "quantitative-reset",
+   "id": "indie-simulation",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "controlled-anaheim",
+   "id": "psychological-surgery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "frank-driving",
+   "id": "religious-detail",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "organizational-richmond",
+   "id": "alpha-cuisine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "expanded-likelihood",
+   "id": "prime-relevance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "concerned-cancer",
+   "id": "collect-bride",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "offensive-compensation",
+   "id": "front-regression",
    "metadata": {},
    "outputs": [
     {
@@ -697,13 +697,13 @@
    "source": [
     "print(\"RF train accuracy: %0.3f\" % rf.score(X_train, y_train))\n",
     "print(\"RF test accuracy: %0.3f\" % rf.score(X_test, y_test))\n",
-    "#F1 score for classification model?"
+    "#F1 score for classification model? Irene: Accuracy score"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "featured-error",
+   "id": "dense-astrology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "unlimited-maximum",
+   "id": "revised-ethics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "transparent-tiffany",
+   "id": "accessory-samba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "acting-invalid",
+   "id": "laughing-wyoming",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "interesting-maria",
+   "id": "dental-rhythm",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "british-cursor",
+   "id": "stretch-decline",
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "alpha-brook",
+   "id": "terminal-custody",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "turned-empire",
+   "id": "brutal-courage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "stable-sherman",
+   "id": "lyric-muscle",
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "cognitive-dutch",
+   "id": "complete-technician",
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "level-insurance",
+   "id": "variable-carol",
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "uniform-pierre",
+   "id": "qualified-breathing",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extreme-sensitivity",
+   "id": "significant-diana",
    "metadata": {},
    "source": [
     "- post requist from the front end and the body will be json object \n",
@@ -1137,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "starting-organ",
+   "id": "banned-effects",
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1164,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "enhanced-associate",
+   "id": "certain-authentication",
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "apart-dinner",
+   "id": "abandoned-senior",
    "metadata": {},
    "outputs": [],
    "source": []
