--- a/Classification models.ipynb
+++ b/Classification models.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "removable-peoples",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "decimal-coupon",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
+   "id": "charming-recorder",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +309,7 @@
        "array(['Rural', 'Urban', 'Semiurban'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +320,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "id": "hundred-cause",
    "metadata": {
     "scrolled": true
    },
@@ -341,7 +345,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +356,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "id": "fantastic-shell",
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +658,7 @@
        "[480 rows x 15 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,6 +670,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "satisfactory-bible",
    "metadata": {},
    "source": [
     "## Legend:\n",
@@ -714,7 +720,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "id": "conditional-capitol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +735,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "id": "accepting-fabric",
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +896,7 @@
        "5                        0                    1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +910,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "id": "mathematical-weekly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +923,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "id": "incomplete-modification",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +935,7 @@
        "Name: Loan_Status_Y, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +946,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "id": "fossil-emphasis",
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +958,7 @@
        "Name: Loan_Status_Y, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,6 +969,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "matched-passenger",
    "metadata": {},
    "source": [
     "#### Decision Tree"
@@ -965,16 +977,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "id": "proprietary-architecture",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7583333333333333"
+       "0.725"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,18 +1001,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
+   "id": "aboriginal-dublin",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'rf' is not defined",
+     "ename": "AttributeError",
+     "evalue": "'Pipeline' object has no attribute 'feature_importances_'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-42b3ce2a41fe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Sort features by their importance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_importances_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeature_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreverse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'rf' is not defined"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-40-42b3ce2a41fe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Sort features by their importance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_importances_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeature_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreverse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Pipeline' object has no attribute 'feature_importances_'"
      ]
     }
    ],
@@ -1011,6 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "likely-dodge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,6 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "royal-gibson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,6 +1049,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fantastic-conjunction",
    "metadata": {},
    "source": [
     "#### Random Forest"
@@ -1041,6 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "generic-making",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,6 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "compact-richmond",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,6 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "geological-printer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,6 +1095,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "rational-probe",
    "metadata": {},
    "source": [
     "#### Logistic Regression"
@@ -1083,6 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "convertible-district",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,6 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "applicable-credits",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,6 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "italic-district",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,6 +1142,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "elect-phoenix",
    "metadata": {},
    "source": [
     "#### K-Nearest Neighbor"
@@ -1126,6 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "corrected-hacker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,6 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "comprehensive-closer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,6 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "comprehensive-conjunction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,6 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "joined-christopher",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,6 +1220,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "isolated-listening",
    "metadata": {},
    "source": [
     "#### Support Vector Machine (SVM)"
@@ -1199,6 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fewer-glossary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,6 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "suburban-requirement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,6 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dependent-uncle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,6 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "scenic-settle",
    "metadata": {
     "scrolled": true
    },
@@ -1247,7 +1281,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 13,
+   "id": "upset-anxiety",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,7 +1308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 14,
+   "id": "manual-latitude",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1320,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 15,
+   "id": "located-naples",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,7 +1331,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 16,
+   "id": "thrown-french",
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1343,7 @@
        "Name: Loan_Status, dtype: int64"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,7 +1354,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 17,
+   "id": "about-ending",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1365,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 18,
+   "id": "involved-driver",
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1380,7 @@
        " 'Property_Area']"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1392,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 19,
+   "id": "collected-methodology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1402,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 20,
+   "id": "metric-thursday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1370,7 +1412,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 21,
+   "id": "conservative-guatemala",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,7 +1422,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 22,
+   "id": "handmade-editing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1436,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 23,
+   "id": "reserved-variety",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,7 +1446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 24,
+   "id": "micro-august",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,7 +1479,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 25,
+   "id": "fabulous-matthew",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1489,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 26,
+   "id": "official-catch",
    "metadata": {
     "scrolled": false
    },
@@ -1463,7 +1511,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 27,
+   "id": "inner-escape",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1473,13 +1522,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "australian-bradford",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 28,
+   "id": "announced-stereo",
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1555,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 29,
+   "id": "visible-element",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1577,7 +1629,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 30,
+   "id": "wanted-frederick",
    "metadata": {
     "scrolled": false
    },
@@ -1597,7 +1650,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 31,
+   "id": "waiting-webcam",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,7 +1660,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 32,
+   "id": "macro-frame",
    "metadata": {
     "scrolled": true
    },
@@ -1618,7 +1673,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 33,
+   "id": "periodic-reception",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1630,7 +1686,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 34,
+   "id": "planned-spell",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1727,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 35,
+   "id": "governing-consultancy",
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1747,7 @@
        " 'Property_Area': 'Urban'}"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1700,7 +1758,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 36,
+   "id": "generous-cutting",
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1826,7 @@
        "0         Urban  "
       ]
      },
-     "execution_count": 302,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1788,7 +1847,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 37,
+   "id": "cultural-merchandise",
    "metadata": {},
    "outputs": [
     {
@@ -1797,7 +1857,7 @@
        "'Y'"
       ]
      },
-     "execution_count": 312,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1818,6 +1878,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "veterinary-ordering",
    "metadata": {},
    "source": [
     "- post requist from the front end and the body will be json object \n",
@@ -1871,7 +1932,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 38,
+   "id": "burning-angle",
    "metadata": {},
    "outputs": [
     {
@@ -1899,7 +1961,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 39,
+   "id": "secondary-illustration",
    "metadata": {},
    "outputs": [
     {
@@ -1927,6 +1990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "expressed-dynamics",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1948,7 +2012,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
